@@ -88,6 +88,8 @@ usage: valgrind [options] prog-and-args
                               handle non-standard kernel variants
     --merge-recursive-frames=<number>  merge frames between identical
            program counters in max <number> frames) [0]
+    --num-transtab-sectors=<number> size of translated code cache [16]
+           more sectors may increase the performance, but use more memory.
     --show-emwarns=no|yes     show warnings about emulation limits? [no]
     --require-text-symbol=:sonamepattern:symbolpattern    abort run if the
                               stated shared object doesn't have the stated
